--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
